<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/quilogramas_metros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quilogramas_metros"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/libras_polegadas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/libras_polegadas"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/peso"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_peso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:hint="@string/exemplo_peso_quilogramas"
            android:inputType="numberDecimal"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/altura"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_altura_metros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/exemplo_altura_metros"
            android:inputType="numberDecimal"
            android:textSize="12sp" />

        <LinearLayout
            android:id="@+id/layout_altura_inches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" >

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/exemplo_altura_polegada"
                android:inputType="number"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:text="@string/apostrofe" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/exemplo_altura_polegadas"
                android:inputType="number"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:text="@string/aspas" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/btn_calcular"
        android:textSize="14sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/layout_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_resultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>